Force state update for nondevice video source after stop.

Before this change, stopping nondevice tracks (e.g., canvas capture)
did not trigger an update that was necessary to remove completed tasks
from a queue with MediaStream-related tasks, preventing new operations
such as getUserMedia from executing.

A test is on a separate CL (crrev.com/c/860361) in order to make merging
easier.

Bug: 800313
Change-Id: Ia395b10510362af91a471a352ff90025c5776dd6
Reviewed-on: https://chromium-review.googlesource.com/860040
Reviewed-by: Henrik Boström <hbos@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528367}
Former-commit-id: b59aeb83a4f06e3e2eaefd6544477c20657fead0